--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,7 +39,7 @@ jobs:
                   sudo mv migrate /usr/bin/migrate
 
             - name: Run migrations
-              run: make migrationup
+              run: make migrateup
 
             - name: Test
               run: make test
