--- a/.env.dev
+++ b/.env.dev
@@ -1,1 +1,3 @@
 DB_SOURCE=postgres://postgres:secret@localhost:5432/bank_project?sslmode=disable
+HTTP_SERVER_ADDRESS=0.0.0.0:8080
+GRPC_SERVER_ADDRESS=0.0.0.0:8081
